--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                             <div class="contact-icon">📧</div>
                             <div class="contact-details">
                                 <h4>Email</h4>
-                                <a href="mailto:ziaputria@email.com">ziaputria@email.com</a>
+                                <a href="mailto:ihediemailm">initehemailnya</a>
                             </div>
                         </div>
                         
@@ -530,7 +530,7 @@
                             <div class="contact-icon">📸</div>
                             <div class="contact-details">
                                 <h4>Instagram</h4>
-                                <a href="https://instagram.com/ziaputria" target="_blank">@ziaputria</a>
+                                <a href="https://instagram.com/ziaaputria" target="_blank">@ziaaputria</a>
                             </div>
                         </div>
                         
@@ -538,7 +538,7 @@
                             <div class="contact-icon">💼</div>
                             <div class="contact-details">
                                 <h4>LinkedIn</h4>
-                                <a href="https://linkedin.com/in/ziaputria" target="_blank">Zia Putria</a>
+                                <a href="https://linkedin.com/in/zi" target="_blank">Zia Putria</a>
                             </div>
                         </div>
                     </div>
@@ -612,4 +612,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
